--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "burger-builder",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://axelkanakan.github.io/BurgerBuilder",
   "dependencies": {
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
@@ -28,6 +29,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
@@ -55,6 +57,8 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "predeploy":"yarn run build",
+    "deploy":"gh-pages -d build",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
